--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,29 +3,31 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-[[main]]
-  name = "Home"
-  url = "#about"
-  weight = 10
+
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "People"
+  url = "people/"
   weight = 20
 
 [[main]]
   name = "Projects"
-  url = "#projects"
+  url = "projects/"
   weight = 30
+  
+  [[main]]
+  name = "Publications"
+  url = "publications/"
+  weight = 35
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
+  name = "PhD Students"
+  url = "phd-students/"
   weight = 40
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
+  name = "Facilities"
+  url = "facilities/"
   weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
